# caela

./: CMakeLists.txt  README.md  aroma2seg.r  cn2markers.sh  cn2tdf.pl  combine-cols.pl  convert-chrom.py  lesions2seg.r  link.py  mtx2gct.r  org-penncnv-cols.pl  renamer.r  seg2bed.r  space2tab.pl  vcf2emu.py
aptpsum2snp_test/: test.txt
src/: dchip2cn.cpp  penn2seg.cpp
tsv2hdf5_test/: test.txt
tsv2hdf5_test/hdf5/: test.hdf5
